--- a/index.html
+++ b/index.html
@@ -88,26 +88,26 @@
 
 <script>
 const mcqs = [
-  { question: "Who wrote 'Ode to a Nightingale'?", options: ["Keats", "Shelley", "Byron", "Wordsworth"], answer: "Keats" },
-  { question: "Which poem starts with 'Season of mists and mellow fruitfulness'?", options: ["To Autumn", "Ode to a Nightingale", "To a Skylark", "The World is Too Much With Us"], answer: "To Autumn" },
-  { question: "Who is the author of 'Ulysses'?", options: ["Tennyson", "Browning", "Arnold", "Shelley"], answer: "Tennyson" },
-  { question: "In which poem do we find the line 'Drive my dead thoughts over the universe'?", options: ["Ode to the West Wind", "To Autumn", "To a Skylark", "Ode to a Nightingale"], answer: "Ode to the West Wind" },
-  { question: "'The Last Ride Together' is written by:", options: ["Robert Browning", "Tennyson", "Keats", "Shelley"], answer: "Robert Browning" },
-  { question: "Who composed 'The World is Too Much With Us'?", options: ["Wordsworth", "Coleridge", "Keats", "Shelley"], answer: "Wordsworth" },
-  { question: "The poem 'The Wild Swans at Coole' is by:", options: ["Yeats", "Eliot", "Hopkins", "Blake"], answer: "Yeats" },
-  { question: "'The Darkling Thrush' is authored by:", options: ["Thomas Hardy", "Tennyson", "Browning", "Yeats"], answer: "Thomas Hardy" },
-  { question: "The poem 'Strange Meeting' was written by:", options: ["Wilfred Owen", "Siegfried Sassoon", "Blunden", "Brooke"], answer: "Wilfred Owen" },
-  { question: "'The Listeners' is written by:", options: ["Walter de la Mare", "Tennyson", "Hardy", "Yeats"], answer: "Walter de la Mare" },
-  { question: "The drama 'Justice' is written by:", options: ["John Galsworthy", "Shaw", "Goldsmith", "Tennyson"], answer: "John Galsworthy" },
-  { question: "Who wrote 'Arms and the Man'?", options: ["Bernard Shaw", "Goldsmith", "Galsworthy", "Sheridan"], answer: "Bernard Shaw" },
-  { question: "'She Stoops to Conquer' is a work of:", options: ["Goldsmith", "Shaw", "Sheridan", "Byron"], answer: "Goldsmith" },
-  { question: "'The Lagoon' was written by:", options: ["Joseph Conrad", "O. Henry", "Somerset Maugham", "Hardy"], answer: "Joseph Conrad" },
-  { question: "'The Lotus Eater' was written by:", options: ["Somerset Maugham", "Joseph Conrad", "O. Henry", "James Joyce"], answer: "Somerset Maugham" },
-  { question: "Author of 'The Gift of the Magi':", options: ["O. Henry", "Conrad", "Joyce", "Maugham"], answer: "O. Henry" },
-  { question: "'The Ox' is written by:", options: ["H. E. Bates", "Maugham", "Conrad", "Hardy"], answer: "H. E. Bates" },
-  { question: "Who wrote 'Dream Children: A Reverie'?", options: ["Charles Lamb", "Addison", "Steele", "Hazlitt"], answer: "Charles Lamb" },
-  { question: "Who wrote 'Principles of Good Writing'?", options: ["L.A. Hill", "Charles Lamb", "Hazlitt", "Addison"], answer: "L.A. Hill" },
-  { question: "Who wrote 'Common Errors in English'?", options: ["T.J. Fitikides", "L.A. Hill", "Murphy", "Wren & Martin"], answer: "T.J. Fitikides" }
+  { question: "In Keats' 'Ode to a Nightingale', what does the speaker wish for in order to join the nightingale?", options: ["A draught of vintage", "Wings of a dove", "Poetic inspiration", "The ability to fly"], answer: "A draught of vintage" },
+  { question: "Which literary device is most prominent in the opening line of 'To Autumn': 'Season of mists and mellow fruitfulness'?", options: ["Alliteration", "Metaphor", "Personification", "Simile"], answer: "Alliteration" },
+  { question: "Ulysses, in Tennyson's poem, desires to embark on a new journey despite his old age because of:", options: ["A thirst for knowledge and experience", "A wish to escape his domestic life", "A command from the gods", "A desire for renewed fame"], answer: "A thirst for knowledge and experience" },
+  { question: "The line 'Drive my dead thoughts over the universe / Like withered leaves to quicken a new birth!' from 'Ode to the West Wind' primarily signifies:", options: ["The poet's desire for his ideas to spread and inspire", "A wish for destruction and decay", "A lament for lost inspiration", "A description of autumn's effects"], answer: "The poet's desire for his ideas to spread and inspire" },
+  { question: "In 'The Last Ride Together' by Robert Browning, what is the speaker's main consolation?", options: ["The shared experience of the ride itself", "The hope of future love", "The prospect of eternal salvation", "The material wealth he possesses"], answer: "The shared experience of the ride itself" },
+  { question: "'The World is Too Much With Us' laments humanity's disconnection from:", options: ["Nature", "Art", "Spirituality", "Each other"], answer: "Nature" },
+  { question: "In 'The Wild Swans at Coole', what emotion does the sight of the swans evoke in the speaker as he reflects on his own aging?", options: ["Nostalgia and melancholy", "Joy and inspiration", "Indifference", "Anger and frustration"], answer: "Nostalgia and melancholy" },
+  { question: "The 'Darkling Thrush' in Hardy's poem sings a song that, despite the bleak setting, conveys:", options: ["A message of hope and optimism", "A feeling of despair and futility", "A warning of impending doom", "A celebration of nature's indifference"], answer: "A message of hope and optimism" },
+  { question: "'Strange Meeting' by Wilfred Owen is set in:", options: ["The underworld/hell during wartime", "A hospital during wartime", "A trench on the battlefield", "A peaceful dream sequence"], answer: "The underworld/hell during wartime" },
+  { question: "In 'The Listeners', the 'phantom listeners' are most likely:", options: ["Spirits of the dead or unseen entities", "Animals in the forest", "Other travelers on the road", "The speaker's own anxieties"], answer: "Spirits of the dead or unseen entities" },
+  { question: "Fals, in Galsworthy's 'Justice', struggles primarily with the rigidity and impersonality of the:", options: ["Legal system", "Social class structure", "Educational system", "Political landscape"], answer: "Legal system" },
+  { question: "In 'Arms and the Man', Sergius's romantic ideals are often contrasted with Bluntschli's:", options: ["Pragmatism and realism", "Cowardice and cynicism", "Aggressiveness and ambition", "Naivete and innocence"], answer: "Pragmatism and realism" },
+  { question: "The central comedic device in 'She Stoops to Conquer' revolves around:", options: ["Mistaken identity and class deception", "Political intrigue and betrayal", "Supernatural occurrences", "Slapstick humor and physical gags"], answer: "Mistaken identity and class deception" },
+  { question: "The primary theme explored in Joseph Conrad's 'The Lagoon' is:", options: ["The isolation of human experience and the burden of secrets", "The beauty of nature and simple living", "The clash between colonizers and indigenous people", "The pursuit of wealth and adventure"], answer: "The isolation of human experience and the burden of secrets" },
+  { question: "In Somerset Maugham's 'The Lotus Eater', the protagonist's ultimate fate highlights the dangers of:", options: ["Escapism and rejection of responsibility", "Excessive ambition and greed", "Unrequited love and emotional repression", "Physical laziness and indulgence"], answer: "Escapism and rejection of responsibility" },
+  { question: "The 'gift' in 'The Gift of the Magi' is ironic because:", options: ["The gifts are useless to the recipients without the sacrificed possessions", "The gifts are extremely valuable but not appreciated", "The gifts are given out of spite, not love", "The gifts are stolen goods"], answer: "The gifts are useless to the recipients without the sacrificed possessions" },
+  { question: "H.E. Bates' 'The Ox' can be interpreted as an allegory for:", options: ["The plight of the working class and the impact of industrialization", "The power of nature over human endeavor", "The cyclical nature of life and death", "The simplicity and resilience of rural life"], answer: "The plight of the working class and the impact of industrialization" },
+  { question: "In 'Dream Children: A Reverie', Charles Lamb's narrative technique primarily involves:", options: ["Nostalgic recollection and bittersweet fantasy", "Sharp social satire and criticism", "Detailed historical analysis", "Abstract philosophical contemplation"], answer: "Nostalgic recollection and bittersweet fantasy" },
+  { question: "L.A. Hill's 'Principles of Good Writing' emphasizes the importance of:", options: ["Clarity, conciseness, and precision", "Flowery language and elaborate metaphors", "Emotional intensity over logical structure", "Writing primarily for an academic audience"], answer: "Clarity, conciseness, and precision" },
+  { question: "T.J. Fitikides' 'Common Errors in English' primarily focuses on rectifying mistakes in:", options: ["Grammar, syntax, and usage", "Literary analysis and interpretation", "Creative writing techniques", "Historical linguistic evolution"], answer: "Grammar, syntax, and usage" }
 ];
 
 function loadQuiz() {
