--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     </li>
     <li><a href="world-is-too-much.html">The World is Too Much With Us</a></li>
     <li><a href="ode-west-wind.html">Ode to the West Wind</a></li>
-    <li><a href="to-a-skylark.html">To a Skylark</a></li>
-    <li><a href="ode-nightingale.html">Ode to a Nightingale</a></li>
+    <li><a href="to-a-skylark-quiz.html">To a Skylark</a></li>     <li><a href="ode-to-a-nightingale-50-questions.html">Ode to a Nightingale</a></li>
     <li><a href="to-autumn.html">To Autumn</a></li>
     <li><a href="ulysses.html">Ulysses</a></li>
     <li><a href="last-ride.html">The Last Ride Together</a></li>
